--- a/build.gradle
+++ b/build.gradle
@@ -40,11 +40,13 @@ dependencies {
     implementation 'commons-beanutils:commons-beanutils:1.9.4'
     implementation 'commons-codec:commons-codec:1.14'
     implementation 'org.apache.commons:commons-pool2:2.8.0'
+    compile group: 'org.bouncycastle', name: 'bcprov-jdk16', version: '1.46'
     implementation 'com.google.guava:guava:28.2-jre'
     implementation ("io.springfox:springfox-swagger2:2.9.2"){
         exclude group: 'io.swagger', module: 'swagger-annotations'
         exclude group: 'io.swagger', module: 'swagger-models'
     }
+//    implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'io.swagger:swagger-annotations:1.6.0'
     implementation 'io.swagger:swagger-models:1.6.0'
     implementation 'com.github.xiaoymin:swagger-bootstrap-ui:1.9.6'
