--- a/src/main/resources/application-pro.yml
+++ b/src/main/resources/application-pro.yml
@@ -1,7 +1,7 @@
 
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/haircut?useUnicode=yes&characterEncoding=UTF-8&useSSL=false&serverTimezone=Asia/Shanghai
+    url: jdbc:mysql://localhost:3306/hhh?useUnicode=yes&characterEncoding=UTF-8&useSSL=false&serverTimezone=Asia/Shanghai
     username: root
     password: 123456
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -16,3 +16,11 @@ spring:
         max-idle: 8 #最大空闲连接 默认8
         max-wait: -1ms #默认-1 最大连接阻塞等待时间
         min-idle: 0 #最小空闲连接
+  rabbitmq:
+    host: 127.0.0.1
+    port: 5672
+    username: root
+    password: 666666
+
+files-location: /Users/zex/upload_files
+host-url: http://api.zex.nat300.top/
