--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -23,4 +23,4 @@ spring:
     password: 666666
 
 files-location: /Users/zex/upload_files
-host-url: http://api.zex.nat300.top/
+host-url: http://api.zex.nat300.top
